--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
+    "multer": "^1.4.5-lts.1",
     "serve-favicon": "~2.4.5"
   }
 }
