--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^4.6.1"
   }
 }
