--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "lang": "en-uk",
-  "name": "Bird Sighting app",
-  "short_name": "Bird Sightings",
-  "description": "A PWA to share and see bird sightings in your area",
+  "name": "Bird sighting app",
+  "short_name": "Bird sightings",
+  "description": "A PWA to share and see bird sightings",
   "start_url": "/",
   "background_color": "#617d57",
   "theme_color": "#617d57",
@@ -10,7 +10,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/images/pwa_logo.png",
+      "src": "public/images/pwa_logo.png",
       "sizes": "512x512"
     }
   ]
